[package]
name = "erspan"
version = "0.1.0"
authors = ["Skoky <skokys@gmail.com>"]
license = "MIT"
description = "Unwraps original data packet from GRE/ERSPAN packet"
homepage = "https://github.com/skoky/erspan-rs"
documentation = "https://github.com/skoky/erspan-rs"
repository = "https://github.com/skoky/erspan-rs"
readme = "README.md"
edition = "2018"

[dependencies]
pnet = "0.26.0"
hex = "0.4.2"
byteorder = "1.4.2"
thiserror = "1.0.23"
